--- a/src/main/java/com/ulquertech/DatosPanel.html
+++ b/src/main/java/com/ulquertech/DatosPanel.html
@@ -27,6 +27,7 @@
             </div>
             <div class="field">
                 <div class="ui primary submit blue button" wicket:id="validar">Validate</div>
+                <!--TODO: reemplazar esto con un comportamiento para el combo de la masterRule -->
             </div>
         </div>
     </form>
