--- a/src/main/java/com/ulquertech/DatosPanel.html
+++ b/src/main/java/com/ulquertech/DatosPanel.html
@@ -6,8 +6,8 @@
                 <input type="text" wicket:id="puzzleName"/>
             </div>
             <div class="field">
-                <label>Oponent Name</label>
-                <input type="text" wicket:id="oponentName"/>
+                <label>Opponent Name</label>
+                <input type="text" wicket:id="opponentName"/>
             </div>
         </div>
         <div class="ui container">
@@ -16,18 +16,14 @@
                 <input type="number" wicket:id="userLP"/>
             </div>
             <div class="field">
-                <label>Oponent LP</label>
-                <input type="number" wicket:id="oponentLP"/>
+                <label>Opponent LP</label>
+                <input type="number" wicket:id="opponentLP"/>
             </div>
         </div>
         <div class="ui container">
             <div class="field">
                 <label>Master Rule</label>
                 <select wicket:id="masterRule"/>
-            </div>
-            <div class="field">
-                <div class="ui primary submit blue button" wicket:id="validar">Validate</div>
-                <!--TODO: reemplazar esto con un comportamiento para el combo de la masterRule -->
             </div>
         </div>
     </form>
