--- a/src/main/java/com/ulquertech/MainPanel.html
+++ b/src/main/java/com/ulquertech/MainPanel.html
@@ -20,7 +20,7 @@
             </table>
         </div>
         <div id="right" class="ui container">
-
+            <div id="vistaPanel" wicket:id="viewPanel">field</div>
         </div>
     </div>
 </wicket:panel>
