--- a/src/main/java/com/ulquertech/HomePage.html
+++ b/src/main/java/com/ulquertech/HomePage.html
@@ -10,11 +10,13 @@
 <div id="body" class="ui container">
     <div id="menu" class="ui secondary menu">
         <div class="item"><a class="ui button" wicket:id="nuevo" title="New"><i
-                class="linkify icon"></i></a></div>
+                class="file outline icon"></i></a></div>
         <div class="item"><a class="ui button" wicket:id="abrir" title="Open"><i
-                class="linkify icon"></i></a></div>
+                class="folder open outline icon"></i></a></div>
         <div class="item"><a class="ui button" wicket:id="guardar" title="Save"><i
-                class="linkify icon"></i></a></div>
+                class="save outline icon"></i></a></div>
+        <div class="item"><a class="ui button" wicket:id="limpiar" title="Clear"><i
+                class="eraser icon"></i></a></div>
     </div>
     <div id="content" wicket:id="content">content</div>
 </div>
