--- a/src/main/java/com/ulquertech/CampoMR4Panel.html
+++ b/src/main/java/com/ulquertech/CampoMR4Panel.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<wicket:panel xmlns="http://wicket.apache.org">
 
-</body>
-</html>
+</wicket:panel>
