CDI & some styles

--- a/src/main/java/com/ulquertech/BusquedaFiltroPanel.html
+++ b/src/main/java/com/ulquertech/BusquedaFiltroPanel.html
@@ -2,11 +2,10 @@
     <div class="ui segment">
         <form class="ui form" wicket:id="form">
             <div class="fields">
-                <div class="field three wide">
+                <div class="twelve wide field">
                     <input type="text" wicket:id="criterio"/>
                 </div>
                 <div class="field">
-                    <label>&nbsp;</label>
                     <div class="ui primary submit blue button" wicket:id="buscar">Buscar</div>
                 </div>
             </div>
