--- a/src/main/java/com/ulquertech/DatosPanel.html
+++ b/src/main/java/com/ulquertech/DatosPanel.html
@@ -1,6 +1,6 @@
 <wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
     <form class="ui form" wicket:id="form">
-        <div class="ui container">
+        <div class="fields">
             <div class="field">
                 <label>Puzzle Name</label>
                 <input type="text" wicket:id="puzzleName"/>
@@ -10,7 +10,7 @@
                 <input type="text" wicket:id="opponentName"/>
             </div>
         </div>
-        <div class="ui container">
+        <div class="fields">
             <div class="field">
                 <label>Your LP</label>
                 <input type="number" wicket:id="userLP"/>
@@ -20,7 +20,7 @@
                 <input type="number" wicket:id="opponentLP"/>
             </div>
         </div>
-        <div class="ui container">
+        <div class="fields">
             <div class="field">
                 <label>Master Rule</label>
                 <select wicket:id="masterRule"/>
