--- a/src/main/java/com/ulquertech/VistaCartaPanel.html
+++ b/src/main/java/com/ulquertech/VistaCartaPanel.html
@@ -1,10 +1,10 @@
 <wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
-    <div class="ui container" wicket:id="container">
+    <div wicket:id="container">
         <div class="field">
             <img wicket:id="cardView"/>
         </div>
         <div class="field">
-            <textarea wicket:id="cardText" rows="15" cols="40"></textarea>
+            <textarea wicket:id="cardText" rows="15" cols="40" style="resize: none;"></textarea>
         </div>
     </div>
 </wicket:panel>
