--- a/src/main/java/com/ulquertech/HomePage.html
+++ b/src/main/java/com/ulquertech/HomePage.html
@@ -6,19 +6,21 @@
     <link rel="stylesheet" href="resources/style.css">
 </head>
 <body style="background: #F4F5F2;">
-<div class="ui header">YGOPro - Puzzle Maker</div>
-<div id="body" class="ui container">
-    <div id="menu" class="ui secondary menu">
-        <div class="item"><a class="ui button" wicket:id="nuevo" title="New"><i
-                class="file outline icon"></i></a></div>
-        <div class="item"><a class="ui button" wicket:id="abrir" title="Open"><i
-                class="folder open outline icon"></i></a></div>
-        <div class="item"><a class="ui button" wicket:id="guardar" title="Save"><i
-                class="save outline icon"></i></a></div>
-        <div class="item"><a class="ui button" wicket:id="limpiar" title="Clear"><i
-                class="eraser icon"></i></a></div>
+<div id="body">
+    <div class="ui header">YGOPro - Puzzle Maker</div>
+    <div class="flex-container">
+        <div id="menu" class="ui secondary menu" style="display: block;width: 6%;">
+            <div class="item"><a class="ui small button" wicket:id="nuevo" title="New"><i
+                    class="file icon"></i></a></div>
+            <div class="item"><a class="ui small button" wicket:id="abrir" title="Open"><i
+                    class="folder open icon"></i></a></div>
+            <div class="item"><a class="ui small button" wicket:id="guardar" title="Save"><i
+                    class="save icon"></i></a></div>
+            <div class="item"><a class="ui small button" wicket:id="limpiar" title="Clear"><i
+                    class="eraser icon"></i></a></div>
+        </div>
+        <div id="content" wicket:id="content" style="width: 94.25%;">content</div>
     </div>
-    <div id="content" wicket:id="content">content</div>
 </div>
 <div wicket:id="notifier"></div>
 </body>
