CampoPanel estructura general y estilos

--- a/src/main/java/com/ulquertech/CampoMR3Panel.html
+++ b/src/main/java/com/ulquertech/CampoMR3Panel.html
@@ -1,3 +1,49 @@
-<wicket:panel xmlns="http://wicket.apache.org">
-
+<wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
+    <div class="ui primary segment">
+        <div class="flex-container" style="width: 100%">
+            <table>
+                <tr>
+                    <td id="fs" class="verticalCard"></td>
+                </tr>
+                <tr>
+                    <td id="pz0" class="verticalCard"></td>
+                </tr>
+                <tr>
+                    <td id="ed" class="verticalCard"></td>
+                </tr>
+            </table>
+            <table style="vertical-align: center">
+                <tr>
+                    <td id="mz0" class="monsterCard"></td>
+                    <td id="mz1" class="monsterCard"></td>
+                    <td id="mz2" class="monsterCard"></td>
+                    <td id="mz3" class="monsterCard"></td>
+                    <td id="mz4" class="monsterCard"></td>
+                </tr>
+                <tr>
+                    <td id="sz0" class="verticalCard"></td>
+                    <td id="sz1" class="verticalCard"></td>
+                    <td id="sz2" class="verticalCard"></td>
+                    <td id="sz3" class="verticalCard"></td>
+                    <td id="sz4" class="verticalCard"></td>
+                </tr>
+            </table>
+            <table>
+                <tr>
+                    <td id="gy" class="verticalCard"></td>
+                </tr>
+                <tr>
+                    <td id="pz1" class="verticalCard"></td>
+                </tr>
+                <tr>
+                    <td id="md" class="verticalCard"></td>
+                </tr>
+            </table>
+            <table style="vertical-align: center">
+                <tr>
+                    <td id="ban" class="verticalCard"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </wicket:panel>
