--- a/src/main/java/com/ulquertech/CampoMR4Panel.html
+++ b/src/main/java/com/ulquertech/CampoMR4Panel.html
@@ -1,3 +1,54 @@
-<wicket:panel xmlns="http://wicket.apache.org">
-
+<wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
+    <div class="ui primary segment">
+        <div class="flex-container" style="width: 100%; margin-left: 1px;">
+            <div style="padding: 0;">
+                <table style="margin: auto auto -2px;border-spacing: 4px 0;">
+                    <tr>
+                        <td id="emz0" class="verticalCard"></td>
+                        <td class="verticalCard" style="border-style: hidden;"></td>
+                        <td id="emz1" class="verticalCard"></td>
+                    </tr>
+                </table>
+                <div class="flex-container" style="width: 100%;">
+                    <table style="padding-right: 0; border-spacing: 2px 8px;">
+                        <tr>
+                            <td id="fs" class="verticalCard"></td>
+                        </tr>
+                        <tr>
+                            <td id="ed" class="verticalCard"></td>
+                        </tr>
+                    </table>
+                    <table style="border-spacing: 4px; margin: auto;">
+                        <tr>
+                            <td id="mz0" class="monsterCard"></td>
+                            <td id="mz1" class="monsterCard"></td>
+                            <td id="mz2" class="monsterCard"></td>
+                            <td id="mz3" class="monsterCard"></td>
+                            <td id="mz4" class="monsterCard"></td>
+                        </tr>
+                        <tr>
+                            <td id="sz0" class="verticalCard"></td>
+                            <td id="sz1" class="verticalCard"></td>
+                            <td id="sz2" class="verticalCard"></td>
+                            <td id="sz3" class="verticalCard"></td>
+                            <td id="sz4" class="verticalCard"></td>
+                        </tr>
+                    </table>
+                    <table style="padding-left: 0; border-spacing: 2px 8px;">
+                        <tr>
+                            <td id="gy" class="verticalCard"></td>
+                        </tr>
+                        <tr>
+                            <td id="md" class="verticalCard"></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <table class="banned">
+                <tr>
+                    <td id="ban" class="verticalCard"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </wicket:panel>
