--- a/src/main/java/com/ulquertech/CampoMR4Panel.html
+++ b/src/main/java/com/ulquertech/CampoMR4Panel.html
@@ -2,7 +2,7 @@
     <div class="ui primary segment">
         <div class="flex-container" style="width: 100%; margin-left: 1px;">
             <div style="padding: 0;">
-                <table style="margin: auto auto -2px;border-spacing: 4px 0;">
+                <table style="margin: auto;border-spacing: 20px 0;">
                     <tr>
                         <td id="emz0" class="verticalCard"></td>
                         <td class="verticalCard" style="border-style: hidden;"></td>
@@ -10,7 +10,7 @@
                     </tr>
                 </table>
                 <div class="flex-container" style="width: 100%;">
-                    <table style="padding-right: 0; border-spacing: 2px 8px;">
+                    <table style="padding-right: 0; border-spacing: 0 8px;">
                         <tr>
                             <td id="fs" class="verticalCard"></td>
                         </tr>
@@ -18,7 +18,7 @@
                             <td id="ed" class="verticalCard"></td>
                         </tr>
                     </table>
-                    <table style="border-spacing: 4px; margin: auto;">
+                    <table style="border-spacing: 20px 4px; margin: auto;">
                         <tr>
                             <td id="mz0" class="monsterCard"></td>
                             <td id="mz1" class="monsterCard"></td>
@@ -34,7 +34,7 @@
                             <td id="sz4" class="verticalCard"></td>
                         </tr>
                     </table>
-                    <table style="padding-left: 0; border-spacing: 2px 8px;">
+                    <table style="padding-left: 0; border-spacing: 0 8px;">
                         <tr>
                             <td id="gy" class="verticalCard"></td>
                         </tr>
