--- a/src/main/java/com/ulquertech/MainPanel.html
+++ b/src/main/java/com/ulquertech/MainPanel.html
@@ -1,10 +1,10 @@
 <wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
     <div class="flex-container">
-        <div id="left" class="flexed-column">
+        <div id="left">
             <div id="data" wicket:id="dataPanel">data</div>
             <div id="field" wicket:id="fieldPanel">field</div>
         </div>
-        <div id="center" class="flexed-column">
+        <div id="center">
             <div id="search" wicket:id="searchFilterPanel">search</div>
             <div style="margin: 0.25em 0 0 0.5em;">
                 <label wicket:id="results"></label>
@@ -19,7 +19,7 @@
                 </tbody>
             </table>
         </div>
-        <div id="right" class="flexed-column">
+        <div id="right">
             <div id="vistaPanel" wicket:id="viewPanel">field</div>
         </div>
     </div>
