--- a/src/main/java/com/ulquertech/CampoMR1y2Panel.html
+++ b/src/main/java/com/ulquertech/CampoMR1y2Panel.html
@@ -1,6 +1,6 @@
 <wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
     <div class="ui primary segment">
-        <div class="flex-container" style="width: 100%">
+        <div class="flex-container fullSpace">
             <table>
                 <tr>
                     <td id="fs" class="verticalCard"></td>
@@ -21,7 +21,7 @@
                     <td id="md" class="verticalCard"></td>
                 </tr>
             </table>
-            <table style="vertical-align: center">
+            <table class="banned">
                 <tr>
                     <td id="ban" class="verticalCard"></td>
                 </tr>
