--- a/src/main/java/com/ulquertech/CampoMR4Panel.html
+++ b/src/main/java/com/ulquertech/CampoMR4Panel.html
@@ -1,6 +1,6 @@
 <wicket:panel xmlns:wicket="http://www.w3.org/1999/xhtml">
     <div class="ui primary segment">
-        <div class="flex-container" style="width: 100%; margin-left: 1px;">
+        <div class="flex-container fullSpace" style="margin-left: 1px;">
             <div style="padding: 0;">
                 <table style="margin: auto;border-spacing: 20px 0;">
                     <tr>
@@ -9,8 +9,8 @@
                         <td id="emz1" class="verticalCard"></td>
                     </tr>
                 </table>
-                <div class="flex-container" style="width: 100%;">
-                    <table style="padding-right: 0; border-spacing: 0 8px;">
+                <div class="flex-container fullSpace">
+                    <table style="padding-right: 0 !important; border-spacing: 0 8px; margin-right: -8px;">
                         <tr>
                             <td id="fs" class="verticalCard"></td>
                         </tr>
@@ -18,7 +18,7 @@
                             <td id="ed" class="verticalCard"></td>
                         </tr>
                     </table>
-                    <table style="border-spacing: 20px 4px; margin: auto;">
+                    <table style="border-spacing: 20px 4px; margin: auto; padding: 0 !important;">
                         <tr>
                             <td id="mz0" class="monsterCard"></td>
                             <td id="mz1" class="monsterCard"></td>
@@ -34,7 +34,7 @@
                             <td id="sz4" class="verticalCard"></td>
                         </tr>
                     </table>
-                    <table style="padding-left: 0; border-spacing: 0 8px;">
+                    <table style="padding-left: 0 !important; border-spacing: 0 8px; margin-left: -8px;">
                         <tr>
                             <td id="gy" class="verticalCard"></td>
                         </tr>
