--- a/src/main/java/com/ulquertech/HomePage.html
+++ b/src/main/java/com/ulquertech/HomePage.html
@@ -5,11 +5,11 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="resources/style.css">
 </head>
-<body style="background: #F4F5F2;">
+<body>
 <div id="body">
     <div class="ui header">YGOPro - Puzzle Maker</div>
-    <div class="flex-container">
-        <div id="menu" class="ui secondary menu" style="display: block;width: 6%;">
+    <div class="flex-container" style="margin-left: 45px;">
+        <div id="menu" class="ui secondary menu">
             <div class="item"><a class="ui small button" wicket:id="nuevo" title="New"><i
                     class="file icon"></i></a></div>
             <div class="item"><a class="ui small button" wicket:id="abrir" title="Open"><i
